评论及收藏功能实现

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,7 +65,9 @@
         <activity android:name=".activity.UpdatePasswordActivity" />
         <activity android:name=".activity.UploadHeadPortraitsActivity" />
         <activity android:name=".activity.EvaluateActivity" />
-        <activity android:name=".activity.EvaluateDetailActivity"></activity>
+        <activity android:name=".activity.EvaluateDetailActivity" />
+        <activity android:name=".activity.MyEvaluateActivity" />
+        <activity android:name=".activity.MyStarActivity"></activity>
     </application>
 
 </manifest>
